# YAGF

./: .gitmodules  CMakeLists.txt  CheckTestsAndMoveThemToRoot.sh  Doxyfile  LICENSE  README.md  UnixUpdateRepos.sh  makeWithoutCheckout.sh  windowsBuild.bat  windowsTestBuild.bat  windowsUpdateRepositories.bat
.github/: codeql-config.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql-analysis.yml  main.yml
.readme.md/: README.md
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  README.md  main.cpp
Engine/Core/core/: InputAdapter.cpp  InputAdapter.hpp  WindowProperties.cpp  WindowProperties.hpp
Engine/Core/core/OpenGLArrays/: ArrayHandler.cpp  ArrayHandler.hpp
Engine/Core/core/base/: OpenGLStart.cpp  OpenGLStart.hpp  Point.hpp  Primitive.cpp  Primitive.hpp  Renderable.hpp  Texture.cpp  Texture.hpp  vertexHandler.cpp  vertexHandler.hpp
Engine/Core/core/base/uml/: Point.puml  Primitive.puml  Rectanagle.puml  Square.puml
Engine/Core/core/primitives/: Lights.cpp  Lights.hpp  Line.cpp  Line.hpp  PrimitivesManager.cpp  PrimitivesManager.hpp  Rectanagle.cpp  Rectanagle.hpp  Square.cpp  Square.hpp
Engine/Core/core/primitives/Light/: DirectLight.cpp  DirectLight.hpp  GlobalLight.cpp  GlobalLight.hpp  SphericalLight.cpp  SphericalLight.hpp
Engine/Core/patterns/MVC/: Controller.hpp  Model.hpp  View.hpp
Engine/Core/patterns/ObserverSubject/: DualLink.hpp  Observer.hpp  Subject.cpp  Subject.hpp
Engine/shaders/: fragShader.vert  vertShader.vert
docs/audit/: 0.html  index.html  stats.html
docs/html/html/: Info.plist  Nodes.xml  Tokens.xml  annotated.html  classes.html  dir_000001_000002.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000007.html  dir_000005_000003.html  dir_000005_000006.html  dir_000008_000009.html  dir_0b6ee6e7e9547e675db4add2e5de97da.html  dir_0b6ee6e7e9547e675db4add2e5de97da_dep.map  dir_0b6ee6e7e9547e675db4add2e5de97da_dep.md5  dir_0e25eeab45a2a860e54b41439eaf8784.html  dir_0e25eeab45a2a860e54b41439eaf8784_dep.map  dir_0e25eeab45a2a860e54b41439eaf8784_dep.md5  dir_190bec2879333bdee0a29318a0995d41.html  dir_190bec2879333bdee0a29318a0995d41_dep.map  dir_190bec2879333bdee0a29318a0995d41_dep.md5  dir_2ab8157cb94b004ea5754488a459db14.html  dir_31d5e1a5987e53dff8cd37993aa122aa.html  dir_31d5e1a5987e53dff8cd37993aa122aa_dep.map  dir_31d5e1a5987e53dff8cd37993aa122aa_dep.md5  dir_4822135792fd038f7adcf0e06ac848f0.html  dir_48a1ad102cbbdd1ff50b933b9d06ef9c.html  dir_48a1ad102cbbdd1ff50b933b9d06ef9c_dep.map  dir_48a1ad102cbbdd1ff50b933b9d06ef9c_dep.md5  dir_5684ab653fe71e017ca9822d05c1fefd.html  dir_70f6e76cb62cb5a2cbdec3e94809a580.html  dir_70f6e76cb62cb5a2cbdec3e94809a580_dep.map  dir_70f6e76cb62cb5a2cbdec3e94809a580_dep.md5  dir_b461b2b705e42b5e1a6ddb21e11a62db.html  dir_b461b2b705e42b5e1a6ddb21e11a62db_dep.map  dir_b461b2b705e42b5e1a6ddb21e11a62db_dep.md5  files.html  functions.html  functions_b.html  functions_c.html  (+72 more)
docs/html/html/d0/d05/: _window_properties_8cpp.html
docs/html/html/d0/d0a/: class_lights_1_1_light_manager.html
docs/html/html/d0/d0c/: namespace_a_e_g.html
docs/html/html/d0/d4c/: class_primitives_1_1_square__coll__graph.map  class_primitives_1_1_square__coll__graph.md5
docs/html/html/d0/d54/: class_i_n_p_u_t_1_1_adapter__inherit__graph.map  class_i_n_p_u_t_1_1_adapter__inherit__graph.md5
docs/html/html/d0/d57/: class_primitives_1_1_square__inherit__graph.map  class_primitives_1_1_square__inherit__graph.md5
docs/html/html/d0/d6b/: vertex_handler_8hpp__incl.map  vertex_handler_8hpp__incl.md5
docs/html/html/d0/d6e/: _view_8hpp__incl.map  _view_8hpp__incl.md5
docs/html/html/d0/d8a/: _line_8cpp.html
docs/html/html/d0/d90/: class_model-members.html
docs/html/html/d0/d92/: class_global_1_1_window_properties-members.html
docs/html/html/d0/da0/: _line_8hpp__dep__incl.map  _line_8hpp__dep__incl.md5
docs/html/html/d0/da9/: _primitives_manager_8cpp.html
docs/html/html/d0/db1/: class_model__coll__graph.map  class_model__coll__graph.md5
docs/html/html/d0/dbd/: class_controller__coll__graph.map  class_controller__coll__graph.md5
docs/html/html/d0/dda/: classvertex_handler-members.html
docs/html/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+95 more)
(+289 files in other folders)
